[package]
name = "btc-cli"
version = "0.1.0"
authors = ["johnyukon21 <johnyukon21@protonmail.com>"]
edition = "2018"

[dependencies]
clap = "2.26.0"
hexdump = "0.1.0"
bitcoin = { path = "../rust-bitcoin/" }
#bitcoin = "0.18.0"

[dependencies.hex]
version = "=0.3.2"

[dependencies.secp256k1]
version = "0.12"
features = [ "rand" ]
