[package]
name = "btc-cli"
version = "0.1.1"
authors = ["johnyukon21 <johnyukon21@protonmail.com>"]
edition = "2018"
categories = ["command-line-utilities"]
license = "CC0-1.0"
description = "A bitcoin command line tool"
readme = "README.md"
homepage = "https://github.com/johnyukon21/btc-cli"
repository = "https://github.com/johnyukon21/btc-cli"

[[bin]]
path = "src/main.rs"
name = "btc-cli"

[dependencies]
clap = "2.26.0"
hexdump = "0.1.0"
rpassword = "0.0.4"
bitcoin = { version = "0.18.0", path = "../rust-bitcoin/" }
bitcoincore-rpc = { version = "0.6.0", path = "../rust-bitcoincore-rpc/client/" }
hex = "0.3.2"
jsonrpc = "0.11.0"

[dependencies.secp256k1]
version = "0.12"
features = [ "rand" ]